--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ La lactancia en instituciones del sector público y privado entró en vigencia e
 <p align="Center">
  <iframe title="Prueba Final" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=3d93c8c6-05d4-4029-8803-080e0644198a&autoAuth=true&ctid=02674ef9-5c2c-47d0-b2bc-595a784dda00" frameborder="0" allowFullScreen="true"></iframe>
 </p>
-<div> <img src="https://js-9raqyx.stackblitz.io/img/grafico1_powerBI.jpg" width="1140" height="541.25"></div>
+<div><p align="Center"><img src="https://cdn.jsdelivr.net/gh/lmendmace/Trabajo_Practico@main/grafico1_powerBI.png" width="1140" height="541.25"></p></div>
 </div>
 
 
