--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@ La lactancia en instituciones del sector público y privado entró en vigencia e
 <iframe title="Prueba Final Grafico 2" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=ee867a1a-bd32-483d-86ba-8eb21b656a74&autoAuth=true&ctid=02674ef9-5c2c-47d0-b2bc-595a784dda00" frameborder="0" allowFullScreen="true"></iframe>
 </p>
 
+<div><p align="Center"><img src="https://cdn.jsdelivr.net/gh/lmendmace/Trabajo_Practico@main/grafico2_powerBI.png" width="1140" height="541.25"></p></div>
+
 
 <p class="text-justify">Según el artículo 7° del Decreto Supremo N° 001-2016-MIMP, se definen las características mínimas para la implementación del servicio de lactancia materna, ya que estas definen las características del servicio y especifican los requisitos fundamentales para la extracción y conservación de la leche materna. Específicamente, las características comprenden un área, privacidad, comodidad, un refrigerador, accesibilidad y un lavamanos.
 <p class="text-justify">El aumento de los centros de lactancia en el sector privado puede atribuirse a varios factores. En primer lugar, es importante que los empresarios den prioridad a la lactancia materna. En segundo lugar, hay una necesidad creciente de centros de lactancia. En tercer lugar, cada vez es más frecuente que los empleados soliciten horarios y opciones de trabajo flexibles. En cuarto lugar, muchos empresarios están viendo los beneficios de la lactancia materna. Por último, cada vez son más los beneficios asociados a la lactancia materna, como las menores tasas de depresión posparto y las mayores tasas de éxito de la lactancia.
